--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
         <div class="modal-inner">
             <!-- VIEW: Puzzle (playing + completed state in same view) -->
             <div id="puzzleView" class="modal-view">
-                <h1 class="modal-title">Dear Gaby...</h1>
+                <h1 class="modal-title">Moin Finja ...</h1>
                 <div class="puzzle-container" id="puzzleContainer">
                     <div class="puzzle-grid-wrap" id="puzzleGridWrap">
                         <div class="puzzle-grid" id="puzzleGrid"></div>
@@ -636,7 +636,7 @@
                 </div>
                 <div class="puzzle-reveal-text" id="puzzleRevealText">
                     <p class="complete-line">...you complete me.</p>
-                    <p class="valentine-question">Will you be my Valentine?</p>
+                    <p class="valentine-question">Finja, willst du meine Valentinstags Verabredung sein?</p>
                     <button type="button" class="yes-only-btn" id="yesBtn">Yes</button>
                 </div>
             </div>
