--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                     </div>
                 </div>
                 <div class="puzzle-reveal-text" id="puzzleRevealText">
-                    <p class="complete-line">...you complete me.</p>
+                    <p class="complete-line">...Du hast das Puzzel geelöst :))</p>
                     <p class="valentine-question">Finja, willst du meine Valentinstags Verabredung sein?</p>
                     <button type="button" class="yes-only-btn" id="yesBtn">Yes</button>
                 </div>
@@ -643,7 +643,7 @@
 
             <!-- VIEW: Success -->
             <div id="successView" class="modal-view">
-                <p class="modal-title">Yay, I can't wait!</p>
+                <p class="modal-title">Yeysirski, ich freue mich </p>
                 <div class="success-gif-wrap">
                     <img src="giphy.gif" alt="" />
                 </div>
