--- a/index.html
+++ b/index.html
@@ -635,8 +635,8 @@
                     </div>
                 </div>
                 <div class="puzzle-reveal-text" id="puzzleRevealText">
-                    <p class="complete-line">...Du hast das Puzzel geelöst :))</p>
-                    <p class="valentine-question">Finja, willst du meine Valentinstags Verabredung sein?</p>
+                    <p class="complete-line">...Du hast das Puzzel Lockerflockig gelöst :))</p>
+                    <p class="valentine-question">Finja, willst du meine Valentinstagsatzin sein?</p>
                     <button type="button" class="yes-only-btn" id="yesBtn">Yes</button>
                 </div>
             </div>
