--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                     </div>
                 </div>
                 <div class="puzzle-reveal-text" id="puzzleRevealText">
-                    <p class="complete-line">...Du hast das Puzzel Lockerflockig gelöst :))</p>
+                    <p class="complete-line">...Du hast das Puzzle Lockerflockig gelöst :))</p>
                     <p class="valentine-question">Finja, willst du meine Valentinstags Atzin sein?</p>
                     <button type="button" class="yes-only-btn" id="yesBtn">Yes</button>
                 </div>
