--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Für Finja :))</title>
+    <title>Für lida :))</title>
     <style>
         * {
             margin: 0;
@@ -625,7 +625,7 @@
         <div class="modal-inner">
             <!-- VIEW: Puzzle (playing + completed state in same view) -->
             <div id="puzzleView" class="modal-view">
-                <h1 class="modal-title">Moin Finja ...</h1>
+                <h1 class="modal-title">Moin Aida ...</h1>
                 <div class="puzzle-container" id="puzzleContainer">
                     <div class="puzzle-grid-wrap" id="puzzleGridWrap">
                         <div class="puzzle-grid" id="puzzleGrid"></div>
@@ -636,7 +636,7 @@
                 </div>
                 <div class="puzzle-reveal-text" id="puzzleRevealText">
                     <p class="complete-line">...Du hast das Puzzle Lockerflockig gelöst :))</p>
-                    <p class="valentine-question">Finja, willst du meine Valentinstags Atzin sein?</p>
+                    <p class="valentine-question"> willst du meine Valentinstags Atzin sein?</p>
                     <button type="button" class="yes-only-btn" id="yesBtn">Yes</button>
                 </div>
             </div>
